unbind whitelist from module API route
