# src/rpiplatesrecognition/rest_api_connexion/routes.py
@@ -147,7 +147,7 @@ def get_photo_for_access_attempt(user: User, access_attempt_id: int):
     return send_from_directory(dirname, filename)
 
 
-def bind_modules(user: User, whitelist_name: str, unique_id: str):
+def bind_whitelist_to_module(user: User, whitelist_name: str, unique_id: str):
     module = get_modules_for_user_query(user).filter_by(unique_id=unique_id).first()
     if module is None:
         return NoContent, 412
@@ -157,5 +157,22 @@ def bind_modules(user: User, whitelist_name: str, unique_id: str):
         return NoContent, 409
 
     module.whitelists.append(whitelist)
+    db.session.commit()
+    return NoContent, 201
+
+
+def unbind_whitelist_from_module(user: User, whitelist_name: str, unique_id: str):
+    module = get_modules_for_user_query(user).filter_by(unique_id=unique_id).first()
+    if module is None:
+        return NoContent, 412
+
+    whitelist = get_whitelists_for_user_query(user).filter_by(name=whitelist_name).first()
+    if whitelist is None:
+        return NoContent, 409
+
+    try:
+        module.whitelists.remove(whitelist)
+    except:
+        pass
     db.session.commit()
     return NoContent, 201
