# src/rpiplatesrecognition/rest_api_connexion/swagger.yml
@@ -279,7 +279,7 @@ paths:
 
   /bind_whitelist_to_module:
     post:
-      operationId: rpiplatesrecognition.rest_api_connexion.routes.bind_modules
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.bind_whitelist_to_module
       description: Binds whitelist with given name to module with given unique_id
       parameters:
         - in: query
@@ -295,6 +295,29 @@ paths:
       responses:
         '201':
           description: Sucessfully bound whitelist to module
+        '409':
+          description: Whitelist with such name is not bound to current user
+        '412':
+          description: Module with such unique_id is not bound to current user
+
+  /unbind_whitelist_from_module:
+    post:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.unbind_whitelist_from_module
+      description: Unbinds whitelist with given name from module with given unique_id
+      parameters:
+        - in: query
+          name: whitelist_name
+          schema:
+            type: string
+          description: Whitelist name
+        - in: query
+          name: unique_id
+          schema:
+            type: string
+          description: Unique id of module
+      responses:
+        '201':
+          description: Sucessfully unbound whitelist to module
         '409':
           description: Whitelist with such name is not bound to current user
         '412':
